--- a/1.4.1/index.html
+++ b/1.4.1/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet"  href="css/themes/default/jquery.mobile-1.4.1.min.css">
 	<link rel="stylesheet" href="_assets/css/jqm-demos.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-	<script src="../js/jquery.js"></script>
+	<script src="js/jquery.js"></script>
 	<script src="_assets/js/index.js"></script>
 	<script src="js/jquery.mobile-1.4.1.min.js"></script>
 </head>
@@ -53,7 +53,7 @@
         			<p><a href="grids/" data-ajax="false">Grids</a></p>
         			<p><a href="../body-bar-classes/" data-ajax="false">Body and bar classes</a></p>
         		</div>
-        	</div>        	
+        	</div>
         	<div class="ui-block-a">
         		<div class="jqm-block-content">
         			<h3>Widgets</h3>
