Dialog: Updated the content demo to mention new page attribute

--- a/1.4.5/pages-dialog/dialog.html
+++ b/1.4.5/pages-dialog/dialog.html
@@ -21,7 +21,7 @@
 
 		<div role="main" class="ui-content">
 		<h1>Delete page?</h1>
-		<p>This is a regular page, styled as a dialog. To create a dialog, just link to a normal page and include a transition and <code>data-rel="dialog"</code> attribute.</p>
+		<p>This is a regular page, styled as a dialog. To create a dialog, just create a normal page and include a <code>data-dialog="true"</code> attribute to the page <code>div</code>. You may also add a transition to the link to improve the dialog effect.</p>
 			<a href="index.html" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-a">Sounds good</a>
 			<a href="index.html" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-a">Cancel</a>
 		</div>
