Fixed Typo in filterable demos #21

--- a/1.4.5/filterable/index.html
+++ b/1.4.5/filterable/index.html
@@ -172,7 +172,7 @@
 					<div data-role="collapsible" data-filtertext="Planets Earth Jupiter Mars Mercury">
 						<h3>Planets</h3>
 						<ul data-role="listview" data-inset="false">
-							<li data-filtertext="Planets Acura">Earth</li>
+							<li data-filtertext="Planets Earth">Earth</li>
 							<li data-filtertext="Planets Jupiter">Jupiter</li>
 							<li data-filtertext="Planets Mars">Mars</li>
 							<li data-filtertext="Planets Mercury">Mercury</li>
