Migrate from http://cdn.rawgit.com to https://cdn.jsdelivr.net

--- a/1.5.0-rc1/listview-nested-lists/index.html
+++ b/1.5.0-rc1/listview-nested-lists/index.html
@@ -11,7 +11,7 @@
 	<script src="../js/jquery.js"></script>
 	<script src="../_assets/js/index.js"></script>
 	<script src="../js/jquery.mobile-1.5.0-rc1.min.js"></script>
-    <script id="script" src="http://cdn.rawgit.com/arschmitz/jquery-mobile-nestedlists/master/jquery.mobile.nestedlists.js"></script>
+    <script id="script" src="https://cdn.jsdelivr.net/gh/arschmitz/jquery-mobile-nestedlists@master/jquery.mobile.nestedlists.js"></script>
 </head>
 <body>
 <div data-role="page" class="jqm-demos" data-quicklinks="true">
