--- a/1.3.2/widgets/links/index.html
+++ b/1.3.2/widgets/links/index.html
@@ -275,7 +275,7 @@
 		<div data-demo-html="true">
             <p>Examples:</p>
             <p><a href="../../../" data-ajax="false">To the homepage, no AJAX</a></p>
-            <p><a href="http://www.google.com" rel="external">Google</a></p>
+            <p><a href="https://www.google.com" rel="external">Google</a></p>
 		</div><!--/demo-html -->
 
 		<p>In version 1.1, we added support for using <code>data-ajax="false"</code> on a parent container which allows you to exclude a large number of links from the AJAX navigation system. This avoids the need to add this attribute to every link in a container. To activate this functionality, <code>$.mobile.ignoreContentEnabled</code> must be set to <code>true</code> because this feature adds overhead we don't want to enable by default.</p>
