--- a/1.4.5/datepicker/index.html
+++ b/1.4.5/datepicker/index.html
@@ -12,7 +12,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../_assets/js/index.js"></script>
     <script src="../js/jquery.mobile-1.4.5.min.js"></script>
-    <script src="http://cdn.rawgit.com/jquery/jquery-ui/1.10.4/ui/jquery.ui.datepicker.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jquery/jquery-ui@1.10.4/ui/jquery.ui.datepicker.js"></script>
     <script id="mobile-datepicker" src="https://cdn.jsdelivr.net/gh/arschmitz/jquery-mobile-datepicker-wrapper@v0.1.1/jquery.mobile.datepicker.js"></script>
 </head>
 <body>
