--- a/1.1.0-rc.1/debug/show2.html
+++ b/1.1.0-rc.1/debug/show2.html
@@ -27,7 +27,7 @@
 	</div>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script src="/js/jquery.mobile.docs.js"></script>
 
 </body>
