--- a/1.5.0-rc1/navigation-php-redirect/index.html
+++ b/1.5.0-rc1/navigation-php-redirect/index.html
@@ -58,7 +58,7 @@
 		<p>Clicking the link below will cause a page to be loaded from the server which contains a special instruction that is captured in the sample code to load the final redirection target page. Note that both the initial page (which contains the redirect) as well as the final redirect target page contain an intentional delay that should simulate network congestion and should allow jQuery Mobile enough time to display the loading indicator.</p>
 
         <div data-demo-html="true" data-demo-js="#redirectCode" data-demo-php="source.php">
-            <a href="redirect.php?to=redirect-target.html" class="ui-shadow ui-button ui-corner-all ui-button-inline">Redirect</a>
+            <a href="redirect.php?to=redirect-target.php" class="ui-shadow ui-button ui-corner-all ui-button-inline">Redirect</a>
         </div><!--/demo-html -->
 
 		<p>Note: This is a PHP demo that will only work on a server and not in a build (i.e. the demos that come with each release).</p>
